Bug 328390 - Grid brush undo problem -- canvas does not refresh
Summary: Grid brush undo problem -- canvas does not refresh
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 16:26 UTC by Bollebib
Modified: 2013-12-12 12:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2013-12-03 16:26:54 UTC
below is the IRC paste from the discussion about this issue with animtim.

Basicly when making stroks with grid brush on a non-blank layer, when you make a few strokes and then undo,this does not update on the canvas.

When you save and re-open however the strokes are indeed gone. So it is a canvas refresh issue.



23:00:07 - Bollebib1: can some one confirm (possible will have to repeat this tomorow when there's more people..)
23:00:07 - Bollebib1: choose a grid brush
23:00:07 - Bollebib1: make a few strokes
23:00:07 - Bollebib1: try to undo
23:00:07 - Bollebib1: ->my result is that some strokes of the grid brush doesn't get undone
23:03:17 - Animtim: Bollebib1: here it works fine, all grid-brush strokes are undone properly
23:03:28 - Bollebib1: strange
23:03:43 - Bollebib1: maybe there is an update to do still..
23:04:23 - Bollebib1: I only need to make 3 consecutive strokes to get the issue
23:05:27 - Bollebib1: but it's only the canvas
23:05:27 - Bollebib1: ,when I save, and re-open the strokes are not there..
23:06:16 - Bollebib2 has left the room (Quit: Remote host closed the connection).
23:07:44 - Animtim: Bollebib1: hum, I can actually reproduce but only if painting on the white background layer (I first tried on new layer, as it's a habit I always do..)
23:08:28 - Bollebib1: I get it on a transparent layer as well,but I already painted on it next to it so maybe that's a factor
23:09:10 - Bollebib1: i'll talk to boud about it tomorow,and then make a report
23:09:45 - Animtim: yep it is indeed: on pure blank layer it doesn't seem to happen, but with a few strokes from another brush engine before, it then happens.
23:09:47 - aditia [~aditia@39.212.229.64] entered the room.
23:10:07 - Bollebib1: good to know
Comment 1 Halla Rempt 2013-12-10 14:58:14 UTC
Yes, I can confirm. Looks like the dirty area of the stroke isn't set correctly.
Comment 2 Dmitry Kazakov 2013-12-12 12:59:08 UTC
Git commit 61022059a55bd3093494952f0a963b3d18d0d248 by Dmitry Kazakov.
Committed on 12/12/2013 at 12:58.
Pushed by dkazakov into branch 'master'.

Do not write-access tiles while doing subpixel color picking

M  +3    -4    krita/image/kis_cross_device_color_picker.h
M  +5    -5    krita/image/kis_random_sub_accessor.cpp
M  +1    -1    krita/image/kis_random_sub_accessor.h

http://commits.kde.org/calligra/61022059a55bd3093494952f0a963b3d18d0d248
Comment 3 Dmitry Kazakov 2013-12-12 12:59:42 UTC
Git commit 93c4b4e1041fa670433382a12c4be31cccb45849 by Dmitry Kazakov.
Committed on 12/12/2013 at 12:58.
Pushed by dkazakov into branch 'calligra/2.8'.

Do not write-access tiles while doing subpixel color picking

M  +3    -4    krita/image/kis_cross_device_color_picker.h
M  +5    -5    krita/image/kis_random_sub_accessor.cpp
M  +1    -1    krita/image/kis_random_sub_accessor.h

http://commits.kde.org/calligra/93c4b4e1041fa670433382a12c4be31cccb45849