Do not write-access tiles while doing subpixel color picking

BUG:328390